--- a/src/deployment/k8s_backend-svc-node.yml
+++ b/src/deployment/k8s_backend-svc-node.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: gateway-node
-  namespace: visionapi
+  namespace: {ns}
 spec:
   selector:
     app: gateway
