--- a/src/deployment/k8s_frontend-deployment.yml
+++ b/src/deployment/k8s_frontend-deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: now-frontend
-  namespace: visionapi
+  namespace: nowapi
 spec:
   replicas: 1
   selector:
