--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,15 @@
 [tool.black]
 line-length = 88
 skip-string-normalization = true
-extend-exclude = 'docs/conf.py'
 
 [tool.isort]
 profile = "black"
-extend_skip = ["docs/conf.py", "setup.py"]
+extend_skip = ["setup.py"]
 skip_gitignore = true
-src_paths = ["finetuner"]
+src_paths = ["now"]
 
 [tool.pytest.ini_options]
 markers = ["gpu: marks tests requires gpu machine (deselect with '-m \"not gpu\"')"]
+
+[tool.pycln]
+all = true
