--- a/requirements_pip.txt
+++ b/requirements_pip.txt
@@ -1,3 +1,4 @@
+--find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.10.2
 torchvision==0.11.3
 transformers==4.16.2
@@ -6,11 +7,6 @@ pyfiglet==0.8.post1
 streamlit==1.5.0
 jina==3.0.1
 cowsay==4.0
-portforward==0.2.7
-oauth2client==4.1.3
 pyInquirer @ git+https://github.com/florian-hoenicke/PyInquirer.git@patch-1
-google-api-python-client==2.38.0
-google-cloud-storage
-google-cloud-container
 yaspin==2.1.0
 py-cpuinfo==8.0.0
