fix(ci): default to CI

--- a/.github/workflows/force-docs-build.yml
+++ b/.github/workflows/force-docs-build.yml
@@ -9,7 +9,7 @@ on:
       triggered_by:
         description: 'CI | CD | TAG | MANUAL'
         required: false
-        default: CD
+        default: CI
 
 jobs:
 # Commenting for now as I don't have token
