--- a/.github/workflows/force-docs-build.yml
+++ b/.github/workflows/force-docs-build.yml
@@ -3,22 +3,23 @@ name: Manual Docs Build
 on:
   workflow_dispatch:
     inputs:
-      release_token:
-        description: 'Your release token'
-        required: true
+#      release_token:
+#        description: 'Your release token'
+#        required: true
       triggered_by:
-        description: 'CD | TAG | MANUAL'
+        description: 'CI | CD | TAG | MANUAL'
         required: false
-        default: MANUAL
+        default: CI
 
 jobs:
-  token-check:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "success!"
-        if: "${{ github.event.inputs.release_token }} == ${{ env.release_token }}"
-        env:
-          release_token: ${{ secrets.DOCARRAY_RELEASE_TOKEN }}
+# Commenting this for now as I don't have release-token
+#  token-check:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - run: echo "success!"
+#        if: "${{ github.event.inputs.release_token }} == ${{ env.release_token }}"
+#        env:
+#          release_token: ${{ secrets.DOCARRAY_RELEASE_TOKEN }}
 
   release-docs:
     needs: token-check
