--- a/.github/workflows/force-docs-build.yml
+++ b/.github/workflows/force-docs-build.yml
@@ -3,26 +3,13 @@ name: Manual Docs Build
 on:
   workflow_dispatch:
     inputs:
-#      release_token:
-#        description: 'Your release token'
-#        required: true
       triggered_by:
-        description: 'CI | CD | TAG | MANUAL'
+        description: 'CD | TAG | MANUAL'
         required: false
-        default: CI
+        default: MANUAL
 
 jobs:
-# Commenting this for now as I don't have release-token
-#  token-check:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - run: echo "success!"
-#        if: "${{ github.event.inputs.release_token }} == ${{ env.release_token }}"
-#        env:
-#          release_token: ${{ secrets.DOCARRAY_RELEASE_TOKEN }}
-
   release-docs:
-    needs: token-check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
