--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,6 +97,42 @@ jobs:
       - name: Test basic import
         run: python -c 'from now import run_all_k8s'
 
+    integration-test:
+      needs: [commit-lint, lint-flake-8, check-black, import-test]
+      runs-on: ubuntu-latest
+      strategy:
+        fail-fast: false
+        matrix:
+          python-version: [ 3.7 ]
+          test-path: ${{fromJson(needs.prep-testbed.outputs.matrix)}}
+      steps:
+        - uses: actions/checkout@v2
+        - name: Set up Python 3.7
+          uses: actions/setup-python@v2
+          with:
+            python-version: 3.7
+        - name: Prepare enviroment
+          run: |
+            python -m pip install --upgrade pip
+            python -m pip install wheel
+            pip install --no-cache-dir .
+        - name: Test integration end-to-end
+          run: |
+            pytest --suppress-no-test-exit-code --cov=now --cov-report=xml -v -s ./tests/integration/test_*.py
+          timeout-minutes: 30
+        - name: Check codecov file
+          id: check_files
+          uses: andstor/file-existence-action@v1
+          with:
+            files: "coverage.xml"
+        - name: Upload coverage from test to Codecov
+          uses: codecov/codecov-action@v2
+          if: steps.check_files.outputs.files_exists == 'true' && ${{ matrix.python-version }} == '3.7'
+          with:
+            file: coverage.xml
+            name: ${{ matrix.test-path }}-codecov
+            flags: ${{ steps.test.outputs.codecov_flag }}
+            fail_ci_if_error: false
 
   prep-testbed:
     runs-on: ubuntu-latest
@@ -153,7 +189,7 @@ jobs:
 
   # just for blocking the merge until all parallel core-test are successful
   success-all-test:
-    needs: core-test
+    needs: [core-test, integration-test]
     if: always()
     runs-on: ubuntu-latest
     steps:
