--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,14 +39,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install wheel
-          pip install --no-cache-dir ".[full,test]"
-          sudo apt-get install libsndfile1
+          pip install --no-cache-dir ".[test]"
       - name: Test
         id: test
         run: |
-          pytest --suppress-no-test-exit-code --cov=docarray --cov-report=xml \
+          pytest --suppress-no-test-exit-code --cov=now --cov-report=xml \
             -v -s -m "not gpu" ${{ matrix.test-path }}
-          echo "::set-output name=codecov_flag::docarray"
+          echo "::set-output name=codecov_flag::now"
         timeout-minutes: 30
       - name: Check codecov file
         id: check_files
@@ -60,7 +59,7 @@ jobs:
           file: coverage.xml
           flags: ${{ steps.test.outputs.codecov_flag }}
           fail_ci_if_error: false
-          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+#          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
 
   prerelease:
     runs-on: ubuntu-latest
