--- a/.github/workflows/label-pr.yml
+++ b/.github/workflows/label-pr.yml
@@ -34,7 +34,7 @@ jobs:
           echo "BRANCH_NAME=${{ github.head_ref }}" >> $GITHUB_ENV
       - uses: actions/checkout@v2
         with:
-          repository: jina-ai/docarray
+          repository: jina-ai/now
           ref: ${{ env.BRANCH_NAME }}
       - uses: actions/setup-python@v2
         with:
