--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -18,9 +18,7 @@ jobs:
         with:
           workflow: Manual Docs Build
           token: ${{ secrets.JINA_DEV_BOT }}
-          inputs: '{ "release_token": "${{ env.release_token }}", "triggered_by": "TAG"}'
-        env:
-          release_token: ${{ secrets.DOCARRAY_RELEASE_TOKEN }}
+          inputs: '{"triggered_by": "TAG"}'
 
   create-release:
     needs: update-doc
