--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   commit-lint:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: find the prev warning if exist
         uses: peter-evans/find-comment@v1
@@ -105,7 +105,7 @@ jobs:
       - uses: actions/checkout@v2
       - id: set-matrix
         run: |
-          brew install jq
+          sudo apt-get install jq
           echo "::set-output name=matrix::$(bash scripts/get-all-test-paths.sh)"
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
@@ -125,9 +125,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Build Docker
-        if: ${{ runner.os == 'macOS' }}
-        uses: docker-practice/actions-setup-docker@master
       - name: Prepare enviroment
         run: |
           python -m pip install --upgrade pip
