--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   commit-lint:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: find the prev warning if exist
         uses: peter-evans/find-comment@v1
@@ -49,7 +49,7 @@ jobs:
           reaction-type: "eyes"
 
   lint-flake-8:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.7
@@ -63,9 +63,8 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --exclude .git,__pycache__,docs/source/conf.py,old,build,dist,tests/,jina/resources/
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --exclude .git,__pycache__,docs/source/conf.py,old,build,dist,tests/,jina/resources/
-
   check-black:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
@@ -82,7 +81,7 @@ jobs:
           CHANGED_FILES: ${{ steps.file_changes.outputs.added_modified }}
 
   import-test:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.7
@@ -99,7 +98,7 @@ jobs:
 
 
   prep-testbed:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     needs: [commit-lint, lint-flake-8, check-black, import-test]
     steps:
       - uses: actions/checkout@v2
@@ -113,7 +112,7 @@ jobs:
 
   core-test:
     needs: prep-testbed
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -136,7 +135,7 @@ jobs:
           pytest --suppress-no-test-exit-code --cov=now --cov-report=xml \
             -v -s -m "not gpu" ${{ matrix.test-path }}
           echo "::set-output name=codecov_flag::now"
-        timeout-minutes: 30
+        timeout-minutes: 45
       - name: Check codecov file
         id: check_files
         uses: andstor/file-existence-action@v1
@@ -155,7 +154,7 @@ jobs:
   success-all-test:
     needs: core-test
     if: always()
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: technote-space/workflow-conclusion-action@v2
       - name: Check Failure
