--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,10 +178,10 @@ jobs:
         id: check_frontend_changed
         run: |
           git fetch origin main
-          diff = $(git diff --name-only HEAD origin/main)
-          SourceDiff = $($diff | Where-Object { $_ -match '^now/frontend' })
-          HasDiff = $($SourceDiff.Length -gt 0)
-          Write-Host "::set-output name=frontend_changed::$HasDiff"
+          DIFF = $(git diff --name-only HEAD origin/main)
+          SOURCE_DIFF = $(DIFF | Where-Object { $_ -match '^now/frontend' })
+          HAS_DIFF = $(SOURCE_DIFF.Length -gt 0)
+          Write-Host "::set-output name=frontend_changed::HAS_DIFF"
 
   dockerize-and-push-frontend:
     runs-on: ubuntu-latest
