--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -171,25 +171,12 @@ jobs:
       frontend_changed: ${{ steps.check_frontend_changed.outputs.frontend_changed }}
     steps:
       - uses: actions/checkout@v2
-#        with:
-#          ref: ${{ github.event.pull_request.head.sha }}
-#          fetch-depth: 0
       - uses: dorny/paths-filter@v2
         id: check_frontend_changed
         with:
           filters: |
             frontend_changed:
               - 'now/frontend/**'
-#      - shell: pwsh
-#        id: check_frontend_changed
-#        run: |
-#          git fetch origin main
-#          $diff = git diff --name-only HEAD origin/main
-#          $SourceDiff = $diff | Where-Object { $_ -match '^now/frontend' }
-#          $HasDiff = $SourceDiff.Length -gt 0
-#          Write-Host "::set-output name=frontend_changed::$HasDiff"
-      - if: steps.check_frontend_changed.outputs.frontend_changed == 'true'
-        run: echo "HI"
 
   dockerize-and-push-frontend:
     runs-on: ubuntu-latest
@@ -211,8 +198,8 @@ jobs:
         env:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
         run: |
-          $docker_image_avail = "$(docker manifest inspect jinaaitmp/now-frontend:IMAGE_TAG)"
-          Write-Host "::set-output name=docker_image_avail::$docker_image_avail"
+          DOCKER_IMAGE_AVAIL = "$(docker manifest inspect jinaaitmp/now-frontend:$IMAGE_TAG)"
+          Write-Host "::set-output name=docker_image_avail::DOCKER_IMAGE_AVAIL"
       - name: Check that no images exist with tag
         env:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
