--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,12 +198,17 @@ jobs:
         env:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
         run: |
-          DOCKER_IMAGE_AVAIL="$(docker manifest inspect jinaaitmp/now-frontend:$IMAGE_TAG)"
-          Write-Host "::set-output name=docker_image_avail::$DOCKER_IMAGE_AVAIL"
+          if docker manifest inspect jinaaitmp/now-frontend:$IMAGE_TAG; then
+            echo "::set-output name=docker_image_avail::true"
+          else
+            echo "::set-output name=docker_image_avail::true"
+          fi
+#          DOCKER_IMAGE_AVAIL="$(docker manifest inspect jinaaitmp/now-frontend:$IMAGE_TAG)"
+#          echo "::set-output name=docker_image_avail::$DOCKER_IMAGE_AVAIL"
       - name: Check that no images exist with tag
         env:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
-        if: steps.get_docker_tag.outputs.docker_image_avail != ''
+        if: steps.get_docker_tag.outputs.docker_image_avail == true
         run: exit 1
       - name: Build, tag, and push image Hub
         env:
