--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,19 +199,19 @@ jobs:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
         run: |
           if docker manifest inspect jinaaitmp/now-frontend:$IMAGE_TAG; then
-            echo "::set-output name=docker_image_avail::true"
-            echo "Docker IMAGE AVAIL"
+            echo "DOCKER_TAG_USED=true" >> $GITHUB_ENV
           else
-            echo "::set-output name=docker_image_avail::true"
-            echo "NOOOOO Docker IMAGE AVAIL"
+            echo "DOCKER_TAG_USED=false" >> $GITHUB_ENV
           fi
 #          DOCKER_IMAGE_AVAIL="$(docker manifest inspect jinaaitmp/now-frontend:$IMAGE_TAG)"
 #          echo "::set-output name=docker_image_avail::$DOCKER_IMAGE_AVAIL"
-      - name: Check that no images exist with tag
-#        env:
-#          IMAGE_TAG: ${{ env.FRONTEND_TAG }}
-        if: steps.get_docker_tag.outputs.docker_image_avail == true
-        run: exit 1
+      - name: Fail if image exists
+        env:
+          DOCKER_TAG_USED: ${{ env.DOCKER_TAG_USED }}
+#        if: steps.get_docker_tag.outputs.docker_image_avail == true
+        run:
+          echo "$DOCKER_TAG_USED"
+#          exit 1
       - name: Build, tag, and push image Hub
         env:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
