--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,18 +203,21 @@ jobs:
           else
             echo "DOCKER_TAG_USED=false" >> $GITHUB_ENV
           fi
-#          DOCKER_IMAGE_AVAIL="$(docker manifest inspect jinaaitmp/now-frontend:$IMAGE_TAG)"
-#          echo "::set-output name=docker_image_avail::$DOCKER_IMAGE_AVAIL"
-      - name: Fail if image exists
+      - name: Fail if tag exists
         env:
           DOCKER_TAG_USED: ${{ env.DOCKER_TAG_USED }}
-        if: DOCKER_TAG_FALSE == 'true'
-        run: exit 1
+        run:
+          if DOCKER_TAG_FALSE == 'true'; then
+            echo "Docker tag is used already"
+            exit 1
+          else
+            echo "Docker tag isn't used already -> Build docker image"
+        fi
       - name: Build, tag, and push image Hub
         env:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
-          DOCKER_TAG_USED: ${{ env.DOCKER_TAG_USED }}
-        if: DOCKER_TAG_FALSE == 'true'
+#          DOCKER_TAG_USED: ${{ env.DOCKER_TAG_USED }}
+#        if: DOCKER_TAG_FALSE == 'true'
         run: |
           docker build -t now-frontend  now/frontend/.
           docker tag now-frontend jinaaitmp/now-frontend:$IMAGE_TAG
