--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,25 +193,24 @@ jobs:
           FILE='now/run_all_k8s.py'
           FRONTEND_TAG=$(sed -n '/docker_frontend_tag =/p' $FILE | cut -d \' -f2)
           echo "FRONTEND_TAG=$FRONTEND_TAG" >> $GITHUB_ENV
-      - name: Check Docker tag is not used already
+      - name: Retrieve any exiting images with tag
+        id: get_docker_tag
         env:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
         run: |
           if docker manifest inspect jinaaitmp/now-frontend:$IMAGE_TAG; then
-#            echo "DOCKER_TAG_USED=true" >> $GITHUB_ENV
-            echo "Docker tag $IMAGE_TAG is used already. Please update tag"
-            exit 1
-#          else
-#            echo "DOCKER_TAG_USED=false" >> $GITHUB_ENV
+            echo "DOCKER_TAG_USED=true" >> $GITHUB_ENV
+          else
+            echo "DOCKER_TAG_USED=false" >> $GITHUB_ENV
           fi
-#      - name: Fail if Docker tag exists
-#        env:
-#          DOCKER_TAG_USED: ${{ env.DOCKER_TAG_USED }}
-#        run: |
-#          if DOCKER_TAG_USED == 'true'; then
-#            echo "Docker tag is used already. Please update tag"
-#            exit 1
-#          fi
+      - name: Fail if tag exists
+        env:
+          DOCKER_TAG_USED: ${{ env.DOCKER_TAG_USED }}
+        run: |
+          if DOCKER_TAG_USED == 'true'; then
+            echo "Docker tag is used already. Please update tag"
+            exit 1
+          fi
       - name: Build, tag, and push image Hub
         env:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
