--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,17 +198,7 @@ jobs:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
         run: |
           if docker manifest inspect jinaaitmp/now-frontend:$IMAGE_TAG; then
-            echo "DOCKER_TAG_USED=true" >> $GITHUB_ENV
-            exit 1
-          else
-            echo "DOCKER_TAG_USED=false" >> $GITHUB_ENV
-          fi
-      - name: Fail if tag exists
-        env:
-          DOCKER_TAG_USED: ${{ env.DOCKER_TAG_USED }}
-        run: |
-          if DOCKER_TAG_USED == 'true'; then
-            echo "Docker tag is used already. Please update tag"
+#            echo "DOCKER_TAG_USED=true" >> $GITHUB_ENV
             exit 1
           fi
       - name: Build, tag, and push image Hub
