--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,8 +198,10 @@ jobs:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
         run: |
           if docker manifest inspect jinaaitmp/now-frontend:$IMAGE_TAG; then
-#            echo "DOCKER_TAG_USED=true" >> $GITHUB_ENV
+            echo "Docker tag isn used already. Please update frontend tag"
             exit 1
+          else
+            echo "Docker tag isn't used already so continue to build..."
           fi
       - name: Build, tag, and push image Hub
         env:
