--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,6 +203,11 @@ jobs:
           else
             echo "Docker tag isn't used already, continue to build..."
           fi
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_DEVBOT_USER }}
+          password: ${{ secrets.DOCKERHUB_DEVBOT_TOKEN }}
       - name: Build, tag, and push image to Hub
         env:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
