--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -207,7 +207,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_DEVBOT_USER }}
-          password: ${{ secrets.DOCKERHUB_DEVBOT_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_DEVBOT_PWD }}
       - name: Build, tag, and push image to Hub
         env:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
