--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,15 +203,18 @@ jobs:
           else
             echo "Docker tag isn't used already, continue to build..."
           fi
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_DEVBOT_USER }}
-          password: ${{ secrets.DOCKERHUB_DEVBOT_PWD }}
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ secrets.DOCKERHUB_DEVBOT_USER }}
+#          password: ${{ secrets.DOCKERHUB_DEVBOT_PWD }}
       - name: Build, tag, and push image to Hub
         env:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
+          DOCKERHUB_USER: ${{ secrets.DOCKERHUB_DEVBOT_USER }}
+          DOCKERHUB_PWD: ${{ secrets.DOCKERHUB_DEVBOT_PWD }}
         run: |
+          docker login -u=$DOCKERHUB_USER -p=$DOCKERHUB_PWD
           docker build -t now-frontend  now/frontend/.
           docker tag now-frontend jinaaitmp/now-frontend:$IMAGE_TAG
           docker push jinaaitmp/now-frontend:$IMAGE_TAG
