--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,7 +1,7 @@
 # Add 'label1' to any changes within 'example' folder or any subfolders
 area/docs:
   - docs/**/*
-  - *.md
+  - README.md
 
 area/testing:
   - tests/**/*
