--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,35 +203,30 @@ jobs:
           else
             echo "Docker tag isn't used already, continue to build..."
           fi
-#      - name: Login to Docker Hub
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1
+#      - name: Login to DockerHub
 #        uses: docker/login-action@v1
 #        with:
-#          username: ${{ secrets.DOCKERHUB_DEVBOT_USER }}
-#          password: ${{ secrets.DOCKERHUB_DEVBOT_PWD }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_DEVBOT_USER }}
-          password: ${{ secrets.DOCKERHUB_DEVBOT_PWD }}
-      - name: Build and push
-        env:
-          IMAGE_TAG: ${{ env.FRONTEND_TAG }}
-        uses: docker/build-push-action@v2
-        with:
-          context: now/frontend/.
-          push: true
-          tags: |
-            now-frontend
-            jinaaitmp/now-frontend:$IMAGE_TAG
-#      - name: Build, tag, and push image to Hub
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+#      - name: Build and push
 #        env:
 #          IMAGE_TAG: ${{ env.FRONTEND_TAG }}
-#          DOCKERHUB_USER: ${{ secrets.DOCKERHUB_DEVBOT_USER }}
-#          DOCKERHUB_PWD: ${{ secrets.DOCKERHUB_DEVBOT_PWD }}
-#        run: |
-#          docker login -u=$DOCKERHUB_USER -p=$DOCKERHUB_PWD
-#          docker build -t now-frontend  now/frontend/.
-#          docker tag now-frontend jinaaitmp/now-frontend:$IMAGE_TAG
-#          docker push jinaaitmp/now-frontend:$IMAGE_TAG
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: now/frontend/.
+#          push: true
+#          tags: |
+#            now-frontend
+#            jinaaitmp/now-frontend:$IMAGE_TAG
+      - name: Build, tag, and push image to Hub
+        env:
+          IMAGE_TAG: ${{ env.FRONTEND_TAG }}
+          DOCKERHUB_USER: ${{ secrets.DOCKER_USERNAME }}
+          DOCKERHUB_PWD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          docker login -u=$DOCKERHUB_USER -p=$DOCKERHUB_PWD
+          docker build -t now-frontend  now/frontend/.
+          docker tag now-frontend jinaaitmp/now-frontend:$IMAGE_TAG
+          docker push jinaaitmp/now-frontend:$IMAGE_TAG
