--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -197,7 +197,7 @@ jobs:
         env:
           IMAGE_TAG: ${{ env.FRONTEND_TAG }}
         run: |
-          if docker manifest inspect jinaaitmp/now-frontend:$IMAGE_TAG; then
+          if docker manifest inspect jinaai/now-frontend:$IMAGE_TAG; then
             echo "Docker tag is used already. Please update frontend tag"
             exit 1
           else
@@ -208,7 +208,6 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          registry: jinaaitmp
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and push
@@ -216,7 +215,7 @@ jobs:
         with:
           context: now/frontend/.
           push: true
-          tags: jinaaitmp/now-frontend:${{ env.FRONTEND_TAG }}
+          tags: jinaai/now-frontend:${{ env.FRONTEND_TAG }}
 #      - name: Build, tag, and push image to Hub
 #        env:
 #          IMAGE_TAG: ${{ env.FRONTEND_TAG }}
@@ -225,5 +224,5 @@ jobs:
 #        run: |
 #          docker login -u=$DOCKERHUB_USER -p=$DOCKERHUB_PWD
 #          docker build -t now-frontend  now/frontend/.
-#          docker tag now-frontend jinaaitmp/now-frontend:$IMAGE_TAG
-#          docker push jinaaitmp/now-frontend:$IMAGE_TAG
+#          docker tag now-frontend jinaai/now-frontend:$IMAGE_TAG
+#          docker push jinaai/now-frontend:$IMAGE_TAG
