--- a/now/deployment/k8s_frontend-deployment.yml
+++ b/now/deployment/k8s_frontend-deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: now-frontend
-          image: jinaaitmp/now-frontend:{docker_frontend_tag}
+          image: jinaai/now-frontend:{docker_frontend_tag}
           imagePullPolicy: Always
           command: ["streamlit"]
           args: ["run", "frontend.py", "--server.port", "80", "{gateway_host}", "{gateway_port}", "{output_modality}", "{data}"]
