--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,6 @@ jobs:
       - name: Test basic import
         run: python -c 'from now import run_all_k8s'
 
-
   prep-testbed:
     runs-on: ubuntu-latest
     needs: [commit-lint, lint-flake-8, check-black, import-test]
@@ -163,3 +162,56 @@ jobs:
       - name: Success
         if: ${{ success() }}
         run: echo "All Done"
+
+  check-if-frontend-has-changed:
+    needs: [commit-lint, lint-flake-8, check-black]
+    runs-on: ubuntu-latest
+    outputs:
+      frontend_changed: ${{ steps.check_frontend_changed.outputs.frontend_changed }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: dorny/paths-filter@v2
+        id: check_frontend_changed
+        with:
+          filters: |
+            frontend_changed:
+              - 'now/frontend/**'
+
+  dockerize-and-push-frontend:
+    runs-on: ubuntu-latest
+    needs: check-if-frontend-has-changed
+    if: needs.check-if-frontend-has-changed.outputs.frontend_changed == 'true'
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: Get frontend tag
+        run: |
+          FILE='now/run_all_k8s.py'
+          FRONTEND_TAG=$(sed -n '/docker_frontend_tag =/p' $FILE | cut -d \' -f2)
+          echo "FRONTEND_TAG=$FRONTEND_TAG" >> $GITHUB_ENV
+      - name: Check that tag isn't used already
+        env:
+          IMAGE_TAG: ${{ env.FRONTEND_TAG }}
+        run: |
+          if docker manifest inspect jinaai/now-frontend:$IMAGE_TAG; then
+            echo "Docker tag is used already. Please update frontend tag"
+            exit 1
+          else
+            echo "Docker tag isn't used already, continue to build..."
+          fi
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: now/frontend/.
+          push: true
+          tags: jinaai/now-frontend:${{ env.FRONTEND_TAG }}
