feat: data loading music (#120)
* feat(dialog): add modality selection

* refactor(parser): use single quote

* refactor(dialog): remove literal

* docs(dialog): add module description

* test(dialog): add unit tests

* test(dialog): patch gke install

* test(backend): fix cli parsing

* refactor(dialog): replace classes by functions

* fix(dialog): fix parse kwargs

* fix(dialog): remove dataset from kwargs

* test(end2end): fix attribute name

* fix(loading): fix url

* feat(constants): add static variables module

* refactor: make kwargs explicit

* refactor: rename audio to music

* refactor: rename audio to music

* chore: update jina version to 3.3.11

* refactor(dialog): simplify expression

* fix: jina version

* refactor: rename dataset to data

* fix: variable name

* test(data): test data loading

* feat(loading): load mp3 files

* test(data): remove gcs usage

* refactor(constants): remove enum

* chore: add pydub

* ci: install ffmpeg

* ci: install ffmpeg

* fix: setup cluster

* chore: disbale music

* refactor(audio): save binary only

Co-authored-by: Florian Hönicke <hoenicke.florian@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,9 +42,7 @@ jobs:
             :broken_heart: Unfortunately, this PR has one ore more **bad commit messages**, it can not be merged. To fix this problem, please refer to:
             - [Commit Message Guideline for the First Time Contributor](https://github.com/jina-ai/jina/issues/553)
             - [Contributing Guideline](https://github.com/jina-ai/jina/blob/master/CONTRIBUTING.md)
-
             Note, other CI tests will *not* *start* until the commit messages get fixed.
-
             This message will be deleted automatically when the commit messages get fixed.
           reaction-type: "eyes"
 
@@ -63,6 +61,7 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --exclude .git,__pycache__,docs/source/conf.py,old,build,dist,tests/,jina/resources/
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --exclude .git,__pycache__,docs/source/conf.py,old,build,dist,tests/,jina/resources/
+
   check-black:
     runs-on: ubuntu-latest
     steps:
@@ -125,6 +124,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Prepare enviroment
         run: |
+          sudo apt update && sudo apt install ffmpeg
           python -m pip install --upgrade pip
           python -m pip install wheel
           pip install --no-cache-dir ".[test]"
